# terminus-realm

./: .geminiignore  .gitignore  .qwenignore  IMPROVEMENT_PLAN.md  PERFORMANCE_BOTTLENECKS.md  PERFORMANCE_REPORT.md  PLAN.md  README.md  config.toml  lint.txt  logfile  package-lock.json  pyproject.toml  requirements.txt  st_server.sh  terminal  test_equipment.py  test_foundation.py  test_loot.py  test_phase1.py  test_phase3.py
.github/workflows/: main.yml
claud_maps/: MAPEXAMP.txt
gpt_maps/: MAPEXAMP.txt
map_editor/: IMPROVEMENT_PLAN.md  README.md  __main__.py  auto_tiler.py  editor.py  editor.py.bak  input_handler.py  map_manager.py  models.py  palette.py  prefab_manager.py  renderer.py  tools.py  undo_manager.py
map_editor/prefabs/: Pond_5x5.json  Room_6x5.json
maps/gemini_maps/: MAPEXAMP.txt
server/: README.md  go.mod
server/handlers/: client_handler.go  client_manager.go
server/messages/: types.go
server/models/: entity.go  world.go
server/network/: connection.go
server/persistence/: json_store.go  postgres_store.go  storage.go
server/services/: chunk_manager.go  player_service.go  world_service.go
src/: README.md  config.py  main.py  main_multiplayer.py
src/core/: README.md  clock.py  ecs.py  engine.py  spatial.py
src/data/: README.md  loader.py
src/entities/: README.md  ai_system.py  boss_system.py  components.py  entities.py  spawn_system.py  vfx_system.py
src/input/: handler.py
tests/: conftest.py  profile_test.py  test_equipment.py  test_foundation.py  test_keys.py  test_loot.py  test_phase1.py  test_phase3.py
(+15 files in other folders)
